Publicar canal: AAA4

--- a/canais/aaa4.html
+++ b/canais/aaa4.html
@@ -416,7 +416,7 @@
 
     <script>
         // Configurações da TV
-        const TV_PROGRAMS = [{"name":"A","videos":["a"]}];
+        const TV_PROGRAMS = [{"name":"A","videos":["a","2"]}];
         const TV_COMMERCIALS = [];
         const ENABLE_COMMERCIALS = false;
         const COMMERCIALS_PER_BREAK = 2;
