Publicar canal: aaa5

--- a/canais/aaa5.html
+++ b/canais/aaa5.html
@@ -348,7 +348,7 @@
             <img src="https://raw.githubusercontent.com/Playtronic/tv/refs/heads/main/template/logotv.png" class="channel-logo" alt="Logo">
             <h1 class="channel-name">aaa5</h1>
         </div>
-        <p class="subtitle"></p>
+        <p class="subtitle">Canal de teste</p>
         
         <div class="video-wrapper">
             <div class="loading" id="loadingMessage">Carregando programação...</div>
