Publicar canal: AAA6

--- a/canais/aaa6.html
+++ b/canais/aaa6.html
@@ -418,7 +418,7 @@
 
     <script>
         // Configurações da TV
-        const TV_PROGRAMS = [{"name":"A","videos":["A"]}];
+        const TV_PROGRAMS = [{"name":"A","videos":["A","B"]}];
         const TV_COMMERCIALS = [];
         const ENABLE_COMMERCIALS = false;
         const COMMERCIALS_PER_BREAK = 2;
