--- a/canais/teste.html
+++ b/canais/teste.html
@@ -1090,6 +1090,8 @@
             </div>
         </div>
         
+
+
         <!-- Indicador de etapas -->
         <div class="step-indicator" id="stepIndicator">
             <div>
@@ -1435,6 +1437,22 @@
     <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-database-compat.js"></script>
 
     <script>
+
+function showScreen(screenId) {
+    const screens = document.querySelectorAll(".screen");
+    screens.forEach(screen => {
+        screen.style.display = "none";
+    });
+
+    const target = document.getElementById(screenId);
+    if (target) {
+        target.style.display = "block";
+    } else {
+        console.error("Tela não encontrada:", screenId);
+    }
+}
+
+
         // ==================== CONFIGURAÇÃO DO FIREBASE ====================
         const firebaseConfig = {
             apiKey: "AIzaSyAfD0QOlAVb50612u6siwCxzfZfGmgEB2E",
