--- a/canais/Gerador.html
+++ b/canais/Gerador.html
@@ -3213,7 +3213,7 @@
                     successMessage.style.display = 'block';
                     
                     const mensagemSucesso = editingChannel 
-                        ? `Canal Atualizado com Sucesso!<br><small>O canal já está disponível online.</small>`
+                        ? `Canal Atualizado com Sucesso!<br><small>Seu canal pode levar alguns minutos para ficar disponível.</small>`
                         : `Seu canal já está no ar!`;
                     
                     successMessage.innerHTML = `
