--- a/canais/Gerador.html
+++ b/canais/Gerador.html
@@ -2073,7 +2073,7 @@
             <img src="${OFFLINE_IMAGE}" class="offline-image" alt="Canal fora do ar">
             <div class="offline-message">
                 <h3>Canal Temporariamente Fora do Ar</h3>
-                <p style="font-size: 0.9rem;">Este canal está passando por manutenção ou atualizações.</p>
+                <p style="font-size: 0.9rem;">Este canal está passando por manutenção.</p>
                 <p style="font-size: 0.9rem;">Tente novamente mais tarde.</p>
             </div>
             ` : `
