--- a/canais/teste.html
+++ b/canais/teste.html
@@ -1267,7 +1267,7 @@
                 <div class="social-media-card">
                     <h3>Botão Personalizado</h3>
                     <div class="form-group">
-                        <label for="customButtonText">Texto do Botão (máx. 20 caracteres):</label>
+                        <label for="customButtonText">Texto do Botão:</label>
                         <input type="text" id="customButtonText" maxlength="20" placeholder="Ex: Nosso Site">
                         <div class="char-counter" id="customButtonTextCounter">0/20</div>
                     </div>
