--- a/canais/teste.html
+++ b/canais/teste.html
@@ -1429,7 +1429,7 @@
             instagram: "https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEizqp69OCUzdNqzumt68hod8fsjWW6RG0g6fR9N5hd_yxFyS1E97M9IHOjXCf465ZC1RvSp_y0-Cc4maWY7Xg5cdUtTkaMObnQjyIEhpsOnPu7dXGzSDBDCP9Hc6iJ05oDWK8z2ZlfWDNCXiCjuqJf07HQHOYUEOLJxgpK28sUApdfyb6cFuuARA1434Q/w92-h92/Animation%201(1).png",
             bluesky: "https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEh1uwMM2dSDjU1uMpL2HxAmqq9fjlgRadIgcNfupSfHBmuibin5SC7LhTcbYJF0INS6VRh7DInSpxMs7QWp9ulVJBYGqRrqWOqEUqZOY-I7X15Bw49MA1vGjLbOX27wgWHvp4-Z3QkzZe0QC-SSWJwiE_RJGSfW78B7FCeLWdlZ2VlUVSyDt-zPaGdrRVcD/w200-h200/Screenshot%202024-09-15%20at%2014-33-49%20Novo%20projeto.png",
             tiktok: "https://img.elo7.com.br/product/zoom/306C54F/painel-redondo-tik-tok-festa-de-crianca.jpg",
-            twitter: "https://raw.githubusercontent.com/Playtronic/tv/refs/heads/main/template/X.png"
+            twitter: "https://upload.wikimedia.org/wikipedia/commons/0/01/X-Logo-Round-Color.png"
         };
 
         // ==================== FUNÇÕES GLOBAIS ====================
