--- a/canais/teste.html
+++ b/canais/teste.html
@@ -1554,7 +1554,7 @@
                     <img src="https://raw.githubusercontent.com/Playtronic/tv/refs/heads/main/template/x-twitter.png" class="social-media-icon" alt="X (Twitter)">
                     <div class="form-group">
                         <label for="twitterUrl">X (Twitter):</label>
-                        <input type="url" id="twitterUrl" placeholder="https://twitter.com/seu-canal ou https://x.com/seu-canal">
+                        <input type="url" id="twitterUrl" placeholder="https://x.com/seu-canal">
                         <div class="error-message" id="twitterError" style="display:none;">URL do X (Twitter) inválida. Deve começar com https://twitter.com/ ou https://x.com/</div>
                     </div>
                 </div>
@@ -1720,8 +1720,8 @@
         
         let totalSlots = 58;
         const DEFAULT_LOGO = "https://raw.githubusercontent.com/Playtronic/tv/refs/heads/main/template/logotv.png";
-        const OFFLINE_IMAGE = "https://github.com/Playtronic/tv/blob/main/template/TesteDeCores.png?raw=true";
-        const BRAZIL_FLAG = "https://github.com/Playtronic/tv/blob/main/template/BR.png?raw=true";
+        const OFFLINE_IMAGE = "https://github.com/Playtronic/tv/blob/main/template/TesteDeCores.png";
+        const BRAZIL_FLAG = "https://github.com/Playtronic/tv/blob/main/template/BR.png";
         const WORLD_ICON = "https://raw.githubusercontent.com/Playtronic/tv/refs/heads/main/template/Mundo.png";
         const FAVICON_URL = "https://raw.githubusercontent.com/Playtronic/tv/refs/heads/main/template/favicon.png";
         const ADULT_ICON = "https://raw.githubusercontent.com/Playtronic/tv/refs/heads/main/template/18%2B.png";
