--- a/canais/teste.html
+++ b/canais/teste.html
@@ -2078,10 +2078,10 @@ function determinarDataEstreia(dadosGerador) {
             }
             
             // Determinar data de estreia usando a nova função
-            const releaseDate = determinarDataEstreia({
-                customReleaseDate: dados.customReleaseDate || false,
-                releaseDate: dados.release || ''
-            });
+            const releaseDate = dados.release || determinarDataEstreia({
+    customReleaseDate: dados.customReleaseDate || false,
+    releaseDate: dados.release || ''
+});
             
             // Gerar channelId
             const channelId = dados.name.toLowerCase()
@@ -4664,7 +4664,7 @@ function calcularDiasDesdeEstreiaCanal() {
                 })),
                 grade: GRADE,
                 comerciais: dadosNormalizados.commercials,
-                release: releaseDate, // Usar a data determinada pela nova função
+                release: dadosNormalizados.releaseDate || releaseDate,
                 showTime: dadosNormalizados.showTime,
                 enableRewind10: dadosNormalizados.enableRewind10,
                 enableRestart: dadosNormalizados.enableRestart,
