--- a/canais/teste.html
+++ b/canais/teste.html
@@ -3858,9 +3858,15 @@ function calcularSlotAtualPlaylist() {
                 if (ENABLE_DEBUG && debugDays) {
                     debugDays.textContent = calcularDiasDesdeEstreia();
                 }
-            }
-            if (ENABLE_DEBUG) {
-    if (debugProgram) debugProgram.textContent = PROGRAMMING_MODE === 'grade' ? (currentProgramIndex + 1) : videoInfo.slotAjustado;
+            }if (ENABLE_DEBUG) {
+    if (debugProgram) {
+        if (PROGRAMMING_MODE === 'grade') {
+            debugProgram.textContent = currentProgramIndex + 1;
+        } else {
+            // Modo playlist: usar currentPlayingSlot que já está em base 1
+            debugProgram.textContent = currentPlayingSlot;
+        }
+    }
 }
             
             if (commercialIndicator) {
