--- a/canais/teste.html
+++ b/canais/teste.html
@@ -3888,11 +3888,13 @@ function calcularSlotAtualPlaylist() {
                     debugDays.textContent = calcularDiasDesdeEstreia();
                 }
 
-}if (ENABLE_DEBUG) {
+}
+
+if (ENABLE_DEBUG) {
     if (debugProgram) {
-        // CORREÇÃO: Sempre calcular pelo tempo, não pela reprodução
-        const slotPeloTempo = calcularSlotAtual();
-        debugProgram.textContent = slotPeloTempo;
+        // CORREÇÃO: Usar a função que retorna o slot NORMALIZADO
+        const slotExibicao = obterSlotParaExibicao();
+        debugProgram.textContent = slotExibicao;
     }
 }
             
