--- a/canais/teste.html
+++ b/canais/teste.html
@@ -4198,7 +4198,9 @@ if (liveBtn) {
                         });
                     }
                 }
-            } else if (youtubeContainer && youtubeContainer.style.display !== 'none') {
+            } 
+
+else if (youtubeContainer && youtubeContainer.style.display !== 'none') {
                 // Para YouTube: recarregar iframe no ponto correto
                 console.log('AO VIVO: Recarregando vídeo YouTube no ponto correto');
                 
@@ -4222,7 +4224,7 @@ if (liveBtn) {
             location.reload();
         }
     });
-}}
+}
             
             if (fullscreenBtn && videoWrapper) {
                 fullscreenBtn.addEventListener('click', function() {
