--- a/canais/teste.html
+++ b/canais/teste.html
@@ -4211,7 +4211,7 @@ if (liveBtn) {
             console.log('AO VIVO: Recarregando vídeo YouTube no ponto correto');
             
             // Obter vídeo atual - usar o slot REAL (não o currentPlayingSlot)
-            const videoInfo = obterVideoParaSlot(slotRealAgora);
+                            const videoInfo = obterVideoParaSlot(slotAtual);
             if (videoInfo && videoInfo.videoUrl) {
                 const videoUrl = videoInfo.videoUrl;
                 if (videoUrl.includes('youtube.com') || videoUrl.includes('youtu.be')) {
@@ -4412,9 +4412,9 @@ if (liveBtn) {
             if (COMMERCIALS_ORDER === 'random') {
                 availableCommercials = [...TV_COMMERCIALS];
             }
-                        const slotAtual = calcularSlotAtual();
+                                    const slotAtual = obterSlotParaExibicao(); // Usar a função de exibição que já normaliza
             currentPlayingSlot = slotAtual;
-                        const videoInfo = obterVideoParaSlot(slotRealAgora);
+            const videoInfo = obterVideoParaSlot(currentPlayingSlot);
             if (videoInfo) {
                 if (PROGRAMMING_MODE === 'grade') {
                     document.getElementById('currentProgram').textContent = \`\${videoInfo.programa.name}\`;
