--- a/canais/teste.html
+++ b/canais/teste.html
@@ -2639,9 +2639,9 @@ function calcularSlotAtual() {
     }
     // Função principal para obter vídeo para o slot atual (ATUALIZADA)
     function obterVideoParaSlot(slotIndex) {
-        if (PROGRAMMING_MODE === 'grade') {
-            // Modo Grade
-            const diasDesdeEstreia = calcularDiasDesdeEstreiaCanal();
+    if (PROGRAMMING_MODE === 'grade') {
+        // Modo Grade
+        const diasDesdeEstreia = calcularDiasDesdeEstreiaCanal();
             currentDay = diasDesdeEstreia;
             currentPlayingSlot = slotIndex;
             
@@ -2670,8 +2670,7 @@ function calcularSlotAtual() {
                 videoIndex: currentVideoIndex,
                 dia: currentDay,
                 nome: programa.name
-            };
-        } else {
+            };        } else {
             // Modo Playlist: slotIndex é base 1 (retornado por calcularSlotAtualPlaylist)
             const totalVideos = TV_PLAYLIST.length;
             
