--- a/canais/teste.html
+++ b/canais/teste.html
@@ -4124,7 +4124,9 @@ if (ENABLE_DEBUG) {
         // Estado atual
         currentState = 'commercial';
         
-        // Handler de fim do comercial        const handleCommercialEnd = function() {
+        // Handler de fim do comercial        
+
+        const handleCommercialEnd = function() {
             console.log('Comercial terminado. CommercialBreakCount:', commercialBreakCount + 1, 'de', COMMERCIALS_PER_BREAK);
             
             // Incrementar contador
@@ -4476,6 +4478,7 @@ function verificarFimDoVideo() {
     }
     // NÃO FAZ NADA PARA COMERCIAIS - eles têm seu próprio handler
 }
+
                       function verificarMudancaDeDia() {
             if (PROGRAMMING_MODE === 'grade') {
                 const agora = new Date();
