--- a/canais/monetizar.html
+++ b/canais/monetizar.html
@@ -244,7 +244,7 @@
                     <div class="adsterra-guide">
                         <p><strong>Como configurar intersticiais:</strong></p>
                         <ol>
-                            <li>Use o mesmo <a href="https://beta.publishers.adsterra.com/referral/9p8Xg77BYU" target="_blank" style="color: #fdbb2d; font-weight: bold;">link de referência</a> para criar sua conta</li>
+                            <li>Crie uma conta em <a href="https://beta.publishers.adsterra.com/referral/9p8Xg77BYU" target="_blank" style="color: #fdbb2d; font-weight: bold;">AdsTerra (link com referência)</a></li>
                             <li>No painel, vá em "Ad Units" → "Interstitial"</li>
                             <li>Clique em "Create Interstitial"</li>
                             <li>Configure as opções (recomendado: carregar a cada 60 segundos)</li>
