--- a/canais/monetizar.html
+++ b/canais/monetizar.html
@@ -156,7 +156,7 @@
             background: rgba(46, 204, 113, 0.2);
             border: 1px solid #2ecc71;
             padding: 15px;
-            border-radius: 8px;
+            border-radius = 8px;
             margin-bottom: 20px;
             text-align: center;
         }
@@ -656,14 +656,12 @@
                 }
 
                 // CRIAR O CÓDIGO COMPLETO
-                const fullCode = `
-                    <div id="adsterra-preview-container" style="width:100%;text-align:center;min-height:100px;">
-                        <script type="text/javascript">
-                            ${inlineScript}
-                        <\/script>
-                        <script type="text/javascript" src="${externalScript}" async><\/script>
-                    </div>
-                `;
+                const fullCode = '<div id="adsterra-preview-container" style="width:100%;text-align:center;min-height:100px;">' +
+                                '<script type="text/javascript">' +
+                                inlineScript +
+                                '</sc' + 'ript>' +
+                                '<script type="text/javascript" src="' + externalScript + '" async></sc' + 'ript>' +
+                                '</div>';
 
                 // INSERIR O CÓDIGO
                 bannerContainer.innerHTML = fullCode;
@@ -730,7 +728,7 @@
             } catch (error) {
                 console.error('Erro ao processar banner AdsTerra:', error);
                 bannerStatus.className = 'preview-status status-error';
-                bannerStatus.textContent = `❌ Erro: ${error.message}`;
+                bannerStatus.textContent = '❌ Erro: ' + error.message;
                 
                 // MOSTRAR DETALHES DO ERRO
                 const errorDetails = document.createElement('div');
@@ -739,12 +737,10 @@
                 errorDetails.style.background = 'rgba(255, 0, 0, 0.1)';
                 errorDetails.style.borderRadius = '5px';
                 errorDetails.style.fontSize = '12px';
-                errorDetails.innerHTML = `
-                    <strong>Detalhes do erro:</strong><br>
-                    ${error.message}<br><br>
-                    <strong>Código inserido (primeiros 200 caracteres):</strong><br>
-                    <code>${adCode.substring(0, 200)}...</code>
-                `;
+                errorDetails.innerHTML = '<strong>Detalhes do erro:</strong><br>' +
+                                         error.message + '<br><br>' +
+                                         '<strong>Código inserido (primeiros 200 caracteres):</strong><br>' +
+                                         '<code>' + adCode.substring(0, 200) + '...</code>';
                 bannerLivePreview.appendChild(errorDetails);
             }
         }
@@ -822,11 +818,11 @@
 
                 // REDIRECIONAR APÓS 1.5 SEGUNDOS
                 setTimeout(() => {
-                    window.location.href = `index.html?channelId=${channelId}&action=publish&monetization=true`;
+                    window.location.href = 'index.html?channelId=' + channelId + '&action=publish&monetization=true';
                 }, 1500);
 
             } catch (error) {
-                document.getElementById('errorMessage').textContent = `❌ Erro: ${error.message}`;
+                document.getElementById('errorMessage').textContent = '❌ Erro: ' + error.message;
                 document.getElementById('errorMessage').style.display = 'block';
                 
                 // ROLAR ATÉ O ERRO
