--- a/canais/monetizar.html
+++ b/canais/monetizar.html
@@ -149,26 +149,27 @@
             font-size: 1.2rem;
         }
 
+        /* CORRIGIDO: Mensagens de erro com fundo branco e texto legível */
         .error {
             background: #ffffff !important;
-            border: 2px solid #e74c3c;
-            padding: 15px;
-            border-radius: 8px;
-            margin-bottom: 20px;
-            text-align: center;
+            border: 2px solid #e74c3c !important;
+            padding: 15px !important;
+            border-radius: 8px !important;
+            margin-bottom: 20px !important;
+            text-align: center !important;
             color: #e74c3c !important;
-            font-weight: bold;
+            font-weight: bold !important;
         }
 
         .success {
             background: #ffffff !important;
-            border: 2px solid #2ecc71;
-            padding: 15px;
-            border-radius: 8px;
-            margin-bottom: 20px;
-            text-align: center;
+            border: 2px solid #2ecc71 !important;
+            padding: 15px !important;
+            border-radius: 8px !important;
+            margin-bottom: 20px !important;
+            text-align: center !important;
             color: #2ecc71 !important;
-            font-weight: bold;
+            font-weight: bold !important;
         }
 
         .adsterra-guide {
@@ -231,31 +232,31 @@
             flex-direction: column;
         }
 
+        /* CORRIGIDO: Status messages com fundo branco */
         .preview-status {
-            margin-top: 10px;
-            font-size: 0.9rem;
-            padding: 8px 12px;
-            border-radius: 4px;
-            display: none;
-            text-align: center;
+            margin-top: 10px !important;
+            font-size: 0.9rem !important;
+            padding: 8px 12px !important;
+            border-radius: 4px !important;
+            display: none !important;
+            text-align: center !important;
+            background: #ffffff !important;
+            border: 1px solid !important;
         }
 
         .status-loading {
-            background: #ffffff !important;
             color: #3498db !important;
-            border: 1px solid #3498db;
+            border-color: #3498db !important;
         }
 
         .status-success {
-            background: #ffffff !important;
             color: #2ecc71 !important;
-            border: 1px solid #2ecc71;
+            border-color: #2ecc71 !important;
         }
 
         .status-error {
-            background: #ffffff !important;
             color: #e74c3c !important;
-            border: 1px solid #e74c3c;
+            border-color: #e74c3c !important;
         }
 
         .interstitial-explanation {
@@ -272,6 +273,18 @@
             border-radius: 8px;
             margin-top: 10px;
             border-left: 3px solid #2ecc71;
+        }
+
+        /* CORRIGIDO: Mensagem de erro do link Apoia.se */
+        .error-message {
+            background: #ffffff !important;
+            border: 1px solid #e74c3c !important;
+            padding: 8px 12px !important;
+            border-radius: 4px !important;
+            margin-top: 5px !important;
+            color: #e74c3c !important;
+            font-weight: bold !important;
+            display: none !important;
         }
 
         .channel-header {
@@ -452,7 +465,7 @@
                     <div class="form-group">
                         <label for="donationLink">Link para doações:</label>
                         <input type="url" id="donationLink" placeholder="https://apoia.se/seucanal">
-                        <div class="error-message" id="donationLinkError" style="color: #ff6b6b; display: none; margin-top: 5px;">O link deve ser do Apoia.se</div>
+                        <div class="error-message" id="donationLinkError">O link deve ser do Apoia.se</div>
                     </div>
 
                     <div class="apoia-explanation">
