--- a/monetizar.html
+++ b/monetizar.html
@@ -585,11 +585,12 @@
         const db = firebase.firestore();
         const functions = firebase.functions();
 
-        // 🔑 CONFIGURAÇÃO DO MERCADO PAGO
+        // 🔑 CONFIGURAÇÃO DO MERCADO PAGO - CORRIGIDO!
         const MP_CONFIG = {
             CLIENT_ID: '4240568631810752',
-            REDIRECT_URI: 'https://canaisdetv.online/mp-callback',
-            COMMERCIALS_REDIRECT_URI: 'https://canaisdetv.online/mp-commercials-callback'
+            // Use a Cloud Function como redirect_uri
+            REDIRECT_URI: 'https://us-central1-playtronic-tv.cloudfunctions.net/mercadoPagoCallback',
+            COMMERCIALS_REDIRECT_URI: 'https://us-central1-playtronic-tv.cloudfunctions.net/mercadoPagoCallback'
         };
 
         let currentUser = null;
