--- a/Gerador.html
+++ b/Gerador.html
@@ -3514,9 +3514,9 @@ ${monetization.adsTerraInterstitial.code}
 
         // CONFIGURAÇÕES DO CANAL
         const PROGRAMMING_MODE = "` + programmingMode + `";
-        const TV_PROGRAMS = \${JSON.stringify(programasArray)};
-        const TV_PLAYLIST = \${JSON.stringify(playlistArray)};
-        const TV_COMMERCIALS = \${JSON.stringify(comerciaisArray)};
+        const TV_PROGRAMS = ${JSON.stringify(programasArray)};
+        const TV_PLAYLIST = ${JSON.stringify(playlistArray)};
+        const TV_COMMERCIALS = ${JSON.stringify(comerciaisArray)};
         const ENABLE_COMMERCIALS = ` + (dados.enableCommercials || false) + `;
         const COMMERCIALS_PER_BREAK = ` + (dados.commercialsPerBreak || 2) + `;
         const COMMERCIALS_ORDER = "` + commercialsOrder + `";
