--- a/Gerador.html
+++ b/Gerador.html
@@ -3513,7 +3513,7 @@ ${monetization.adsTerraInterstitial.code}
     <script>
         // CONFIGURAÇÕES DO CANAL
         const PROGRAMMING_MODE = "` + programmingMode + `";
-        const TV_PROGRAMS = ${JSON.stringify(programasArray)};
+        const TV_PROGRAMS = \${JSON.stringify(programasArray)};
         const TV_PLAYLIST = ` + JSON.stringify(playlistArray) + `;
         const TV_COMMERCIALS = ` + JSON.stringify(comerciaisArray) + `;
         const ENABLE_COMMERCIALS = ` + (dados.enableCommercials || false) + `;
