--- a/Gerador.html
+++ b/Gerador.html
@@ -3342,8 +3342,9 @@ if (slotIndex === currentPlayingSlot) {
 
 ${hasAdsTerraInterstitial ? `
 <!-- AdsTerra Interstitial Script -->
-${monetization.adsTerraInterstitial.code}
+` + monetization.adsTerraInterstitial.code + `
 ` : ''}
+
 
 </head>
 <body>
