--- a/Gerador.html
+++ b/Gerador.html
@@ -3464,11 +3464,12 @@ ${hasAdsTerraInterstitial ? `
     <script>
         document.addEventListener('DOMContentLoaded', function() {
             setTimeout(function() {
-                ${monetization.adsTerraInterstitial.code}
+                /* AdsTerra code injected later */
             }, 1000);
         });
     </script>
     ` : ''}
+
     
     <!-- Lightbox de Doação -->
     ${hasPixDonations ? '<div id="donationLightbox" style="display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.9); z-index: 9999; justify-content: center; align-items: center;"><div style="background: white; padding: 30px; border-radius: 10px; max-width: 400px; width: 90%; color: black; text-align: center; box-shadow: 0 5px 30px rgba(0,0,0,0.5);"><button id="closeDonationLightbox" style="position: absolute; top: 10px; right: 10px; background: none; border: none; font-size: 24px; cursor: pointer; color: #666;">×</button><h3 style="color: #333; margin-bottom: 15px;">Apoie este canal</h3><p style="color: #666; margin-bottom: 20px;">Faça uma doação de QUALQUER valor para incentivar o criador.</p><div style="margin: 20px 0;"><label for="donationAmount" style="display: block; margin-bottom: 8px; font-weight: bold; color: #333;">Valor (R$):</label><input type="number" id="donationAmount" min="1" step="0.01" placeholder="Ex: 10.00" style="width: 100%; padding: 12px; border: 2px solid #3498db; border-radius: 5px; font-size: 16px; text-align: center;"><small style="color: #666; display: block; margin-top: 8px;">Você será redirecionado para o Mercado Pago para finalizar o pagamento via PIX.</small></div><div style="display: flex; justify-content: space-between; gap: 10px;"><button id="cancelDonation" style="background: #e74c3c; color: white; border: none; padding: 12px 20px; border-radius: 5px; cursor: pointer; font-weight: bold; flex: 1;">Cancelar</button><button id="confirmDonation" style="background: #27ae60; color: white; border: none; padding: 12px 20px; border-radius: 5px; cursor: pointer; font-weight: bold; flex: 1;">Pagar via PIX</button></div><div id="donationResult" style="margin-top: 20px; display: none;"></div></div></div>' : ''}
