--- a/Gerador.html
+++ b/Gerador.html
@@ -7789,7 +7789,8 @@ toScreen3Btn.addEventListener('click', () => {
             updateAuthUI();
             
             // NOVA FUNÇÃO: Verificar se veio de atualização de monetização
-function verificarAtualizacaoMonetizacao() {
+async function verificarAtualizacaoMonetizacao() {
+
     const urlParams = new URLSearchParams(window.location.search);
     const monetizationUpdated = urlParams.get('monetizationUpdated');
     const source = urlParams.get('source');
@@ -7799,18 +7800,21 @@ function verificarAtualizacaoMonetizacao() {
         console.log('⚠️ Atualização de monetização detectada. Carregando canal:', channelId);
         
         // Redirecionar para a tela de edição do canal específico
-        setTimeout(() => {
-            editChannel(channelId);
-            // Após carregar o canal, ir direto para tela 6
-            setTimeout(() => {
-                showScreen('screen6');
-            }, 1000);
-        }, 500);
+        // Aguardar o carregamento do canal e depois ir para tela 6
+        try {
+            await editChannel(channelId);
+            showScreen('screen6');
+        } catch (error) {
+            console.error('Erro ao carregar canal:', error);
+            showScreen('screen0');
+        }
     }
 }
 
 // Chamar após o DOM estar carregado
-setTimeout(verificarAtualizacaoMonetizacao, 1000);
+setTimeout(async () => {
+    await verificarAtualizacaoMonetizacao();
+}, 1000);
 
 // Inicializar a tela 0
 showScreen('screen0');
