--- a/Gerador.html
+++ b/Gerador.html
@@ -5453,7 +5453,8 @@ version: channelData.version || '1.0.0.0',
             }
         }
 
-        // Função principal de publicação (ATUALIZADA COM NOVA LÓGICA DE DATA)async function iniciarPublicacao() {
+        // Função principal de publicação (ATUALIZADA COM NOVA LÓGICA DE DATA)
+async function iniciarPublicacao() {
     console.log("Iniciando publicação...");
     
     // 🔥 VERIFICAR SE É UMA ATUALIZAÇÃO DE MONETIZAÇÃO
