--- a/Gerador.html
+++ b/Gerador.html
@@ -3395,7 +3395,7 @@ if (slotIndex === currentPlayingSlot) {
         
         ${customButtonHTML}
 
-${MONETIZATION_CONFIG.pixDonations.enabled ? `
+${dados.monetization && dados.monetization.pixDonations && dados.monetization.pixDonations.enabled ? `
 <!-- Botão de Doação PIX -->
 <div style="text-align: center; margin: 20px 0;">
     <button id="pixDonationBtn" style="background: linear-gradient(135deg, #009ee3, #0077b3); color: white; border: none; padding: 12px 24px; border-radius: 8px; font-weight: bold; font-size: 1.1rem; cursor: pointer; text-shadow: 1px 1px 2px rgba(0,0,0,0.3);">
@@ -3469,6 +3469,10 @@ ${adsTerraInterstitialSection}
         const RELEASE_DATE = "${releaseDate}";
         const IS_OFFLINE = ${isOffline};
         const CHANNEL_VERSION = "${version}";
+        const MONETIZATION_CONFIG = ${JSON.stringify({
+            pixDonations: dados.monetization && dados.monetization.pixDonations ? dados.monetization.pixDonations : { enabled: false },
+            paidCommercials: dados.monetization && dados.monetization.paidCommercials ? dados.monetization.paidCommercials : { enabled: false }
+        })};
         // CONFIGURAÇÕES DE MONETIZAÇÃO
         const MONETIZATION_CONFIG = ${JSON.stringify({
             pixDonations: dados.monetization && dados.monetization.pixDonations ? dados.monetization.pixDonations : { enabled: false },
