--- a/Gerador.html
+++ b/Gerador.html
@@ -2067,6 +2067,11 @@ function determinarDataEstreia(dadosGerador) {
 
         // Função para gerar HTML do canal (ATUALIZADA COM NOVA LÓGICA DE DATA)
         function gerarHTMLdoCanal(dados) {
+    console.log('💰 Dados recebidos para gerarHTMLdoCanal:', {
+        name: dados.name,
+        hasMonetization: !!dados.monetization,
+        monetizationData: dados.monetization
+    });
             const isOffline = dados.isOffline || false;
             const visibility = dados.visibility || 'brazil';
             const isAdultContent = dados.isAdultContent || false;
@@ -2121,10 +2126,32 @@ function determinarDataEstreia(dadosGerador) {
                     <div class="program-name" id="onlineViewers">0</div>
                 </div>
                 <div class="program-item">
-                    <div class="program-label">Nota do Canal:</div>
+                    <div class="program-label">
+
+Nota do Canal:</div>
                     <div class="program-name" id="channelRating">N/D</div>
                 </div>
             </div>` : '';
+
+
+            // SEÇÃO DE MONETIZAÇÃO - BANNER ADSTERRA
+            let adsTerraBannerSection = '';
+            if (dados.monetization && dados.monetization.adsTerraBanner && dados.monetization.adsTerraBanner.enabled && dados.monetization.adsTerraBanner.code) {
+                adsTerraBannerSection = `
+                <div class="ads-terra-banner-section" style="margin: 20px 0; padding: 15px; background: rgba(255,255,255,0.1); border-radius: 8px; text-align: center;">
+                    <h3 style="margin-bottom: 15px; color: #fdbb2d;">Publicidade</h3>
+                    <div id="adsTerraBannerContainer">
+                        ${dados.monetization.adsTerraBanner.code}
+                    </div>
+                </div>
+                `;
+            }
+
+            // SEÇÃO DE MONETIZAÇÃO - INTERSTICIAL ADSTERRA (será injetado via script)
+            let adsTerraInterstitialSection = '';
+            if (dados.monetization && dados.monetization.adsTerraInterstitial && dados.monetization.adsTerraInterstitial.enabled && dados.monetization.adsTerraInterstitial.code) {
+                adsTerraInterstitialSection = dados.monetization.adsTerraInterstitial.code;
+            }
             
             // Script de verificação de país
             const countryCheckScript = visibility === 'brazil' ? `
