--- a/Gerador.html
+++ b/Gerador.html
@@ -5480,7 +5480,7 @@ async function carregarConfiguracoesMonetizacao(channelId) {
                 isAdultContent: dadosNormalizados.isAdultContent || false,
                 socialMedia: dadosNormalizados.socialMedia,
                 customButton: dadosNormalizados.customButton,
-                version: dadosNormalizados.version
+                version: dadosNormalizados.version,
                 monetization: dadosNormalizados.monetization || null
 
             };
