--- a/Gerador.html
+++ b/Gerador.html
@@ -4769,7 +4769,8 @@ function verificarFimDoVideo() {
                     const nomeArquivo = nomeCanal.toLowerCase()
                         .replace(/[^a-z0-9]/g, '-')
                         .replace(/-+/g, '-') + '.html';
-                    const urlCanal = `https://playtronic.github.io/tv/canais/${nomeArquivo}`;
+                    const urlCanal = `https://canaisdetv.online/tv/canais/${nomeArquivo}`;
+
                     
                     return {
                         url: urlCanal,
