--- a/Gerador.html
+++ b/Gerador.html
@@ -4769,7 +4769,7 @@ function verificarFimDoVideo() {
                     const nomeArquivo = nomeCanal.toLowerCase()
                         .replace(/[^a-z0-9]/g, '-')
                         .replace(/-+/g, '-') + '.html';
-                    const urlCanal = `https://canaisdetv.online/tv/canais/${nomeArquivo}`;
+                    const urlCanal = `https://canaisdetv.online/canais/${nomeArquivo}`;
 
                     
                     return {
@@ -5267,7 +5267,7 @@ function verificarFimDoVideo() {
                             const nomeArquivo = channel.name.toLowerCase()
                                 .replace(/[^a-z0-9]/g, '-')
                                 .replace(/-+/g, '-') + '.html';
-                            const urlCanal = channel.url || `https://playtronic.github.io/tv/canais/${nomeArquivo}`;
+                            const urlCanal = channel.url || `https://canaisdetv.online/canais/${nomeArquivo}`;
                             
                             const isOffline = channel.isOffline || false;
                             const visibility = channel.visibility || 'brazil';
@@ -5313,7 +5313,7 @@ function verificarFimDoVideo() {
                                 <p class="spectators" id="spectators-${channel.id}">Espectadores: 0</p>
                                 <div class="channel-status ${statusClass}">${statusText}</div>
                                 <div class="channel-actions">
-                                    ${urlCanal && urlCanal !== 'https://playtronic.github.io/tv/canais/.html' ? 
+                                    ${urlCanal && urlCanal !== 'https://canaisdetv.online/canais/.html' ? 
                                         `<button class="watch-channel" data-id="${channel.id}" data-url="${urlCanal}">Abrir ${channel.name}</button>` : ''}
                                     <button class="edit-channel" data-id="${channel.id}">Editar</button>
                                     <button class="toggle-offline-channel" data-id="${channel.id}" data-offline="${isOffline}">
