--- a/Gerador.html
+++ b/Gerador.html
@@ -7319,15 +7319,8 @@ if (monetizationData) {
                 // Carregar o canal para edição
                 await editChannel(channelIdFromMonetize);
                 
-                // 🔥 CARREGAR CONFIGURAÇÕES DE MONETIZAÇÃO// 🔥 CARREGAR CONFIGURAÇÕES DE MONETIZAÇÃO
-const monetizationData = await carregarConfiguracoesMonetizacao(channelId);
-if (monetizationData) {
-    tvData.monetization = monetizationData;
-    console.log("Configurações de monetização carregadas:", monetizationData);
-} else {
-    tvData.monetization = null;
-console.log("tvData.monetization após carregamento:", tvData.monetization);
-}
+                // 🔥 CARREGAR CONFIGURAÇÕES DE MONETIZAÇÃO
+                await carregarConfiguracoesMonetizacao(channelIdFromMonetize);
                 
                 // Ir direto para a tela 6 para publicar
                 setTimeout(() => {
