--- a/Gerador.html
+++ b/Gerador.html
@@ -3852,7 +3852,8 @@ if (slotIndex === currentPlayingSlot) {
             `}
         </div>
         
-        ${customButtonHTML}
+        ${supportButtonHTML}${customButtonHTML}
+
         
         <div class="program-info" id="program-info">
             <div class="program-item">
