--- a/Gerador.html
+++ b/Gerador.html
@@ -2154,6 +2154,7 @@ function gerarHTMLdoCanal(dados) {
     const channelId = dados.name.toLowerCase()
         .replace(/[^a-z0-9]/g, '-')
         .replace(/-+/g, '-');
+const CHANNEL_ID = "${channelId}";
     
     const debugSection = (!isOffline && dados.enableDebug) ? `
     <div class="debug-info">
