--- a/Gerador.html
+++ b/Gerador.html
@@ -2401,7 +2401,7 @@ let donationSystem = {
                     channelId: CHANNEL_ID,
                     amount: amount,
                     paymentType: 'donation',
-                    payerEmail: currentUserChannel ? currentUserChannel.email : ''
+                    payerEmail: window.currentUserChannel ? window.currentUserChannel.email : ''
                 })
             });
             
@@ -3088,6 +3088,27 @@ if (slotIndex === currentPlayingSlot) {
     }
 <\/script>
 `;    
+
+// 🔥 CONFIGURAÇÃO DE MONETIZAÇÃO PARA O CANAL GERADO
+const monetizationConfig = {
+    adsTerraBanner: { enabled: false, code: '' },
+    adsTerraInterstitial: { enabled: false, code: '' },
+    pixDonations: { 
+        enabled: true,  // ← HABILITAR DOAÇÕES PIX
+        mpAccessToken: 'SEU_ACCESS_TOKEN_AQUI',  // ← ADICIONE SEU TOKEN
+        mpPlatformUserId: '282224393'
+    },
+    paidCommercials: { 
+        enabled: false, 
+        pricePerSecond: 0.05, 
+        maxDuration: 90,
+        mpAccessToken: '',
+        mpPlatformUserId: '282224393'
+    }
+};
+
+// Adicionar ao dadosParaEnvio
+dadosParaEnvio.monetization = monetizationConfig;
             
             // HTML do canal
             const html = `<!DOCTYPE html>
