--- a/Gerador.html
+++ b/Gerador.html
@@ -2401,7 +2401,7 @@ let donationSystem = {
                     channelId: CHANNEL_ID,
                     amount: amount,
                     paymentType: 'donation',
-                    payerEmail: window.currentUserChannel ? window.currentUserChannel.email : ''
+                    payerEmail: currentUserChannel ? currentUserChannel.email : ''
                 })
             });
             
