--- a/monetizar.html
+++ b/monetizar.html
@@ -116,11 +116,11 @@
         }
 
         .guide-box {
-            background: rgba(255, 255, 255, 0.15);
+            background: rgba(0, 0, 0, 0.3);
             padding: 20px;
             border-radius: 8px;
             margin-top: 20px;
-            border: 1px solid rgba(255, 255, 255, 0.3);
+            border: 1px solid rgba(255, 255, 255, 0.2);
         }
 
         .guide-box h4 {
@@ -146,6 +146,26 @@
         }
 
         .guide-box a:hover {
+            text-decoration: underline;
+        }
+
+        /* Estilo para as dicas com background escuro */
+        .tip-box {
+            background: rgba(0, 0, 0, 0.4);
+            padding: 15px;
+            border-radius: 6px;
+            margin-top: 15px;
+            border-left: 3px solid #fdbb2d;
+            font-style: italic;
+        }
+
+        .tip-box a {
+            color: #ffcc44;
+            font-weight: bold;
+            text-decoration: none;
+        }
+
+        .tip-box a:hover {
             text-decoration: underline;
         }
 
@@ -364,7 +384,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>💰 Monetização do Canal</h1>
+        <h1>Monetização do Canal</h1>
         <div id="loading" class="loading">Carregando configurações do canal...</div>
 
         <div id="content" style="display: none;">
@@ -407,9 +427,10 @@
                             <li>Cole o link completo no campo acima.</li>
                             <li>Clique em <strong>"Salvar Configurações"</strong> abaixo.</li>
                         </ol>
-                        <p style="margin-top: 15px; font-style: italic; color: #ffcc44;">
-                            💡 Dica: Você pode testar o link copiando e colando em uma nova aba para verificar se redireciona corretamente.
-                        </p>
+                        
+                        <div class="tip-box">
+                            Dica: Você pode testar o link copiando e colando em uma nova aba para verificar se redireciona corretamente.
+                        </div>
                     </div>
                 </div>
             </div>
@@ -449,9 +470,10 @@
                             <li>O status mostrará "✅ Conectado ao Mercado Pago".</li>
                             <li>Clique em <strong>"Salvar Configurações"</strong> abaixo.</li>
                         </ol>
-                        <p style="margin-top: 15px; font-style: italic; color: #ffcc44;">
-                            💡 Não tem conta? <a href="https://mpago.li/1vRW8z3" target="_blank">Crie uma conta gratuita no Mercado Pago</a>
-                        </p>
+                        
+                        <div class="tip-box">
+                            Não tem conta? <a href="https://mpago.li/1vRW8z3" target="_blank">Crie uma conta gratuita no Mercado Pago</a>
+                        </div>
                     </div>
                 </div>
             </div>
