--- a/monetizar.html
+++ b/monetizar.html
@@ -524,6 +524,10 @@
                             <li>O status mostrará "✅ Conectado ao Mercado Pago".</li>
                             <li>Clique em <strong>"Salvar Configurações"</strong> abaixo.</li>
                         </ol>
+                        
+                        <div class="tip-box">
+                            Não tem conta? <a href="https://mpago.li/1vRW8z3" target="_blank">Crie uma conta gratuita no Mercado Pago</a>
+                        </div>
                     </div>
                 </div>
             </div>
