--- a/monetizar.html
+++ b/monetizar.html
@@ -405,9 +405,9 @@
                     <label for="adsterraSmartlink">Habilitar Smartlink Adsterra</label>
                 </div>
                 
-                <div class="info-box">
-                    <p><strong>Como funciona:</strong> Seus espectadores serão redirecionados para uma página de propaganda antes de acessar o canal. Após clicar no anúncio, eles terão acesso completo ao seu canal. Essa é uma forma eficaz de monetizar seu conteúdo.</p>
-                </div>
+               <div class="info-box">
+    <p><strong>Como funciona:</strong> Quando um espectador acessa seu canal, o conteúdo ficará bloqueado inicialmente. Para desbloquear, o espectador precisará clicar em um botão específico que abrirá uma nova aba com um anúncio. Após visualizar o anúncio, o conteúdo do seu canal será automaticamente liberado e poderá ser assistido normalmente na aba original.</p>
+</div>
                 
                 <div id="adsterraSettings" style="display: none; margin-top: 15px;">
                     <div class="form-group">
