--- a/Gerador.html
+++ b/Gerador.html
@@ -1726,6 +1726,24 @@
         const FAVICON_URL = "https://raw.githubusercontent.com/Playtronic/tv/refs/heads/main/template/favicon.png";
         const ADULT_ICON = "https://raw.githubusercontent.com/Playtronic/tv/refs/heads/main/template/18%2B.png";
         
+
+// 🔥 FUNÇÃO PARA GERAR ID CONSISTENTE ENTRE GERADOR E CANAL
+function gerarChannelIdConsistente(channelData) {
+    // Se o canal tem URL, extrair o nome do arquivo
+    if (channelData.url) {
+        const urlParts = channelData.url.split('/');
+        const fileName = urlParts[urlParts.length - 1];
+        if (fileName && fileName.endsWith('.html')) {
+            return fileName.replace('.html', '');
+        }
+    }
+    
+    // Se não tem URL ou não conseguiu extrair, usar nome processado
+    return channelData.name.toLowerCase()
+        .replace(/[^a-z0-9]/g, '-')
+        .replace(/-+/g, '-');
+}
+
 // Função para formatar data no formato YYYY-MM-DD (local)
 function formatarDataLocal(date) {
     const year = date.getFullYear();
@@ -8612,4 +8630,3 @@ toScreen3Btn.addEventListener('click', () => {
     </script>
 </body>
 </html>
- 
